charts-kustomize/frigate/frigate-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
spec:
  template:
    spec:
      hostUsers: false
